# LifeHub

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  dev-plan.md  start-backend.bat  start-frontend.bat
lifehub-backend/: .gitignore  Dockerfile  README.md  alembic.ini  debug_register.py  debug_server.py  full_test.py  just_start.py  kill_port.py  kill_server.py  pyproject.toml  quick_test.py  start_server.py  test_api.py  test_db.py  test_health.py
lifehub-backend/alembic/: env.py  script.py.mako
lifehub-backend/alembic/versions/base/: 001_create_base_tables.py
lifehub-backend/alembic/versions/module_daily/: 002_create_daily_tables.py
lifehub-backend/alembic/versions/module_finance/: 003_create_finance_tables.py
lifehub-backend/app/: main.py
lifehub-backend/app/base/api/: auth.py  dashboard.py  sync.py  tags.py  users.py
lifehub-backend/app/base/core/: config.py  event_bus.py  plugin_loader.py  security.py
lifehub-backend/app/base/db/: base_model.py  session.py
lifehub-backend/app/base/models/: attachment.py  sync.py  tag.py  user.py
lifehub-backend/app/base/schemas/: auth.py  tag.py  user.py
lifehub-backend/app/base/services/: auth_service.py  sync_service.py  tag_service.py
lifehub-backend/app/common/: deps.py  exceptions.py  response.py
lifehub-backend/app/modules/module_daily/: __init__.py  api.py  events.py  models.py  schemas.py  services.py
lifehub-backend/app/modules/module_finance/: __init__.py  api.py  calculator.py  (+4 more)
lifehub-backend/scripts/: dev.bat  kill_port.py  start_dev.py  stop.bat  stop.py  test_api.py  test_db.py  test_full.py
(+62 files in other folders)
